fixed item mouseover getting stuck sometimes (mouseout didn't set dirty flag)

--- a/poedit.css
+++ b/poedit.css
@@ -149,6 +149,8 @@
 	font-family: Fontin,Verdana,sans-serif;
 	font-size: 15px;
 	font-variant: small-caps;
+
+	cursor: default;
 }
 
 .item > .sockets {
